# judy

./: Judy.pc.in  Makefile.am  bootstrap  configure.ac
src/: Makefile.am
src/Judy1/: Makefile.am
src/JudyCommon/: Makefile.am
src/JudyHS/: Makefile.am
src/JudyL/: Makefile.am
src/JudySL/: Makefile.am
src/libJudy/: Makefile.am
tool/: Makefile.am
